[gd_scene load_steps=20 format=3 uid="uid://dk4reaxs2tlf8"]

[ext_resource type="Script" path="res://Scripts/Tank.gd" id="1_6qpxn"]
[ext_resource type="Texture2D" uid="uid://c7x32sfjvrwu3" path="res://Assets/Tank Wheel Set.png" id="2_cocxp"]
[ext_resource type="Script" path="res://Scripts/wheels.gd" id="3_y0fwh"]
[ext_resource type="Texture2D" uid="uid://c2ta8tpy7xnpo" path="res://Assets/tank-1.png" id="4_bk6g4"]
[ext_resource type="Script" path="res://Components/health_component.gd" id="5_86v3g"]
[ext_resource type="PackedScene" uid="uid://brvtcpf7vraqx" path="res://Components/health_bar_component.tscn" id="6_82h3i"]
[ext_resource type="Script" path="res://Components/hurt_box_component.gd" id="7_hfhk1"]
[ext_resource type="Script" path="res://Components/detector_component.tres.gd" id="8_3eqto"]
[ext_resource type="Script" path="res://Components/navigation_component.gd" id="8_do71s"]
[ext_resource type="Script" path="res://Components/velocity_component.gd" id="9_1besi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ow4"]
atlas = ExtResource("2_cocxp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk1my"]
atlas = ExtResource("2_cocxp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62oan"]
atlas = ExtResource("2_cocxp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_234pl"]
atlas = ExtResource("2_cocxp")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiae0"]
atlas = ExtResource("2_cocxp")
region = Rect2(128, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0i6xs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ow4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk1my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62oan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_234pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiae0")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_od2ca"]
size = Vector2(26, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_8dmjc"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7smc"]
size = Vector2(26, 26)

[node name="Tank" type="CharacterBody2D"]
collision_mask = 64
motion_mode = 1
script = ExtResource("1_6qpxn")

[node name="Wheels" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0i6xs")
autoplay = "default"
frame_progress = 0.538693
script = ExtResource("3_y0fwh")

[node name="Hull" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0.5, 1)
texture = ExtResource("4_bk6g4")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_86v3g")

[node name="HealthBarComponent" parent="." instance=ExtResource("6_82h3i")]
offset_left = -37.0
offset_top = -26.0
offset_right = 37.0
offset_bottom = -14.0
tint_progress = Color(8.23036e-06, 0.772518, 0.297999, 1)

[node name="HurtBoxComponent" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32
script = ExtResource("7_hfhk1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("RectangleShape2D_od2ca")
debug_color = Color(0.912218, 0, 0.299023, 0.42)

[node name="DetectorComponent" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 127
script = ExtResource("8_3eqto")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorComponent"]
shape = SubResource("CircleShape2D_8dmjc")
debug_color = Color(0, 0.626474, 0.510827, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d7smc")

[node name="NavigationComponent" type="NavigationAgent2D" parent="."]
navigation_layers = 5
script = ExtResource("8_do71s")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("9_1besi")

[connection signal="mouse_entered" from="HurtBoxComponent" to="HurtBoxComponent" method="_on_mouse_entered"]
